// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prepublish script check for undefined mandatory options 1`] = `"appSlug cannot be undefined"`;

exports[`Prepublish script generates sha256 1`] = `
Object {
  "appBuildUrl": "http://example.com",
  "appSlug": "cozy-mock",
  "appType": "webapp",
  "appVersion": "0.0.1",
  "buildCommit": undefined,
  "registryEditor": "Cozy",
  "registryToken": "a5464f54e654c6546b54a56a",
  "registryUrl": "http://registry.mock/",
  "sha256Sum": "3587cb776ce0e4e8237f215800b7dffba0f25865cb84550e87ea8bbac838c423",
  "spaceName": undefined,
}
`;

exports[`Prepublish script handles prepublish hook 1`] = `
Object {
  "appBuildUrl": "http://cozy.io",
  "appSlug": "cozy-mock",
  "appType": "webapp",
  "appVersion": "0.0.1",
  "buildCommit": undefined,
  "registryEditor": "Cozy",
  "registryToken": "a5464f54e654c6546b54a56a",
  "registryUrl": "http://registry.mock/",
  "sha256Sum": "67ebd36d450fe0382f97f296c1ee23d80463bd35dd9618a398307ad6509ba59d",
  "spaceName": undefined,
}
`;

exports[`Prepublish script ignores invalid prepublish hook path 1`] = `
Object {
  "appBuildUrl": "http://example.com",
  "appSlug": "cozy-mock",
  "appType": "webapp",
  "appVersion": "0.0.1",
  "buildCommit": undefined,
  "registryEditor": "Cozy",
  "registryToken": "a5464f54e654c6546b54a56a",
  "registryUrl": "http://registry.mock/",
  "sha256Sum": "3587cb776ce0e4e8237f215800b7dffba0f25865cb84550e87ea8bbac838c423",
  "spaceName": undefined,
}
`;

exports[`Prepublish script ignores prepublish hook thrown error 1`] = `
Object {
  "appBuildUrl": "http://example.com",
  "appSlug": "cozy-mock",
  "appType": "webapp",
  "appVersion": "0.0.1",
  "buildCommit": undefined,
  "registryEditor": "Cozy",
  "registryToken": "a5464f54e654c6546b54a56a",
  "registryUrl": "http://registry.mock/",
  "sha256Sum": "3587cb776ce0e4e8237f215800b7dffba0f25865cb84550e87ea8bbac838c423",
  "spaceName": undefined,
}
`;

exports[`Prepublish script sanitize options from hook script 1`] = `
Object {
  "appBuildUrl": "http://example.com",
  "appSlug": "cozy-mock",
  "appType": "webapp",
  "appVersion": "0.0.1",
  "buildCommit": undefined,
  "registryEditor": "Cozy",
  "registryToken": "a5464f54e654c6546b54a56a",
  "registryUrl": "http://registry.mock/",
  "sha256Sum": "3587cb776ce0e4e8237f215800b7dffba0f25865cb84550e87ea8bbac838c423",
  "spaceName": undefined,
}
`;
